--- a/auto-commit.yml
+++ b/auto-commit.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout du dépôt
         uses: actions/checkout@v3
 
-      - name: Vérifier ou créer le fichier
-        run: touch fichier.txt
-
       - name: Modifier le fichier
         run: echo "Mise à jour automatique : $(date)" >> fichier.txt
 
@@ -27,4 +24,5 @@ jobs:
       - name: Commit et push
         run: |
           git add fichier.txt
-          git diff --staged --quiet || (git commit -m "Mise à jour automatique : $(date)" && git push)
+          git commit -m "Mise à jour automatique : $(date)"
+          git push
